hatchet/HsParser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.7 from HsParser.ly
-----------------------------------------------------------------------------

state 69 contains 1 shift/reduce conflicts.
state 84 contains 8 shift/reduce conflicts.
state 208 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start -> module                                   (0)
	module -> 'module' modid maybeexports 'where' body   (1)
	module -> body                                     (2)
	body -> '{' layout_off bodyaux '}'                 (3)
	body -> layout_on bodyaux close                    (4)
	bodyaux -> impdecls ';' fixdecls ';' topdecls optsemi   (5)
	bodyaux -> impdecls ';' topdecls optsemi           (6)
	bodyaux -> fixdecls ';' topdecls optsemi           (7)
	bodyaux -> topdecls optsemi                        (8)
	bodyaux -> impdecls optsemi                        (9)
	bodyaux ->                                         (10)
	optsemi -> ';'                                     (11)
	optsemi ->                                         (12)
	maybeexports -> exports                            (13)
	maybeexports ->                                    (14)
	exports -> '(' exportlist maybecomma ')'           (15)
	exports -> '(' ')'                                 (16)
	maybecomma -> ','                                  (17)
	maybecomma ->                                      (18)
	exportlist -> exportlist ',' export                (19)
	exportlist -> export                               (20)
	export -> qvar                                     (21)
	export -> qtyconorcls                              (22)
	export -> qtyconorcls '(' '..' ')'                 (23)
	export -> qtyconorcls '(' ')'                      (24)
	export -> qtyconorcls '(' qcnames ')'              (25)
	export -> 'module' modid                           (26)
	qcnames -> qcnames ',' qcname                      (27)
	qcnames -> qcname                                  (28)
	qcname -> qvar                                     (29)
	qcname -> qcon                                     (30)
	impdecls -> impdecls ';' impdecl                   (31)
	impdecls -> impdecl                                (32)
	impdecl -> 'import' srcloc optqualified modid maybeas maybeimpspec   (33)
	optqualified -> 'qualified'                        (34)
	optqualified ->                                    (35)
	maybeas -> 'as' modid                              (36)
	maybeas ->                                         (37)
	maybeimpspec -> impspec                            (38)
	maybeimpspec ->                                    (39)
	impspec -> '(' importlist maybecomma ')'           (40)
	impspec -> 'hiding' '(' importlist maybecomma ')'   (41)
	importlist -> importlist ',' import                (42)
	importlist -> import                               (43)
	import -> var                                      (44)
	import -> tyconorcls                               (45)
	import -> tyconorcls '(' '..' ')'                  (46)
	import -> tyconorcls '(' ')'                       (47)
	import -> tyconorcls '(' cnames ')'                (48)
	cnames -> cnames ',' cname                         (49)
	cnames -> cname                                    (50)
	cname -> var                                       (51)
	cname -> con                                       (52)
	fixdecls -> fixdecls ';' fix                       (53)
	fixdecls -> fix                                    (54)
	fix -> infix srcloc prec ops                       (55)
	prec ->                                            (56)
	prec -> INT                                        (57)
	infix -> 'infix'                                   (58)
	infix -> 'infixl'                                  (59)
	infix -> 'infixr'                                  (60)
	ops -> ops ',' op                                  (61)
	ops -> op                                          (62)
	topdecls -> topdecls ';' topdecl                   (63)
	topdecls -> topdecl                                (64)
	topdecl -> 'type' simpletype srcloc '=' type       (65)
	topdecl -> 'data' ctype srcloc '=' constrs deriving   (66)
	topdecl -> 'newtype' ctype srcloc '=' constr deriving   (67)
	topdecl -> 'class' srcloc ctype optcbody           (68)
	topdecl -> 'instance' srcloc ctype optvaldefs      (69)
	topdecl -> 'default' srcloc type                   (70)
	topdecl -> decl                                    (71)
	decls -> decls1 optsemi                            (72)
	decls -> optsemi                                   (73)
	decls1 -> decls1 ';' decl                          (74)
	decls1 -> decl                                     (75)
	decl -> signdecl                                   (76)
	decl -> valdef                                     (77)
	decllist -> '{' layout_off decls '}'               (78)
	decllist -> layout_on decls close                  (79)
	signdecl -> vars srcloc '::' ctype                 (80)
	vars -> vars ',' var                               (81)
	vars -> qvar                                       (82)
	type -> btype '->' type                            (83)
	type -> btype                                      (84)
	btype -> btype atype                               (85)
	btype -> atype                                     (86)
	atype -> gtycon                                    (87)
	atype -> tyvar                                     (88)
	atype -> '(' types ')'                             (89)
	atype -> '[' type ']'                              (90)
	atype -> '(' type ')'                              (91)
	gtycon -> qconid                                   (92)
	gtycon -> '(' ')'                                  (93)
	gtycon -> '(' '->' ')'                             (94)
	gtycon -> '[' ']'                                  (95)
	gtycon -> '(' commas ')'                           (96)
	ctype -> btype '=>' type                           (97)
	ctype -> type                                      (98)
	types -> types ',' type                            (99)
	types -> type ',' type                             (100)
	simpletype -> tycon tyvars                         (101)
	tyvars -> tyvars tyvar                             (102)
	tyvars ->                                          (103)
	constrs -> constrs '|' constr                      (104)
	constrs -> constr                                  (105)
	constr -> srcloc scontype                          (106)
	constr -> srcloc sbtype conop sbtype               (107)
	constr -> srcloc con '{' layout_off fielddecls '}'   (108)
	scontype -> btype                                  (109)
	scontype -> scontype1                              (110)
	scontype1 -> btype '!' atype                       (111)
	scontype1 -> scontype1 satype                      (112)
	satype -> atype                                    (113)
	satype -> '!' atype                                (114)
	sbtype -> btype                                    (115)
	sbtype -> '!' atype                                (116)
	fielddecls -> fielddecls ',' fielddecl             (117)
	fielddecls -> fielddecl                            (118)
	fielddecl -> vars '::' stype                       (119)
	stype -> type                                      (120)
	stype -> '!' atype                                 (121)
	deriving ->                                        (122)
	deriving -> 'deriving' qtycls                      (123)
	deriving -> 'deriving' '(' ')'                     (124)
	deriving -> 'deriving' '(' dclasses ')'            (125)
	dclasses -> dclasses ',' qtycls                    (126)
	dclasses -> qtycls                                 (127)
	optcbody -> 'where' '{' layout_off cbody '}'       (128)
	optcbody -> 'where' layout_on cbody close          (129)
	optcbody ->                                        (130)
	cbody -> cmethods ';' cdefaults optsemi            (131)
	cbody -> cmethods optsemi                          (132)
	cbody -> optsemi                                   (133)
	cmethods -> cmethods ';' signdecl                  (134)
	cmethods -> signdecl                               (135)
	cdefaults -> cdefaults ';' valdef                  (136)
	cdefaults -> valdef                                (137)
	optvaldefs -> 'where' '{' layout_off valdefs '}'   (138)
	optvaldefs -> 'where' layout_on valdefs close      (139)
	optvaldefs ->                                      (140)
	valdefs -> cdefaults optsemi                       (141)
	valdefs -> optsemi                                 (142)
	valdef -> infixexp srcloc rhs                      (143)
	valdef -> infixexp srcloc rhs 'where' decllist     (144)
	rhs -> '=' exp                                     (145)
	rhs -> gdrhs                                       (146)
	gdrhs -> gdrhs gdrh                                (147)
	gdrhs -> gdrh                                      (148)
	gdrh -> '|' exp srcloc '=' exp                     (149)
	exp -> infixexp '::' srcloc ctype                  (150)
	exp -> infixexp                                    (151)
	infixexp -> exp10                                  (152)
	infixexp -> infixexp qop exp10                     (153)
	exp10 -> '\\' aexps srcloc '->' exp                (154)
	exp10 -> 'let' decllist 'in' exp                   (155)
	exp10 -> 'if' exp 'then' exp 'else' exp            (156)
	exp10 -> 'case' exp 'of' altslist                  (157)
	exp10 -> '-' fexp                                  (158)
	exp10 -> 'do' stmtlist                             (159)
	exp10 -> fexp                                      (160)
	fexp -> fexp aexp                                  (161)
	fexp -> aexp                                       (162)
	aexps -> aexps aexp                                (163)
	aexps -> aexp                                      (164)
	aexp -> aexp '{' layout_off fbinds '}'             (165)
	aexp -> aexp1                                      (166)
	aexp1 -> qvar                                      (167)
	aexp1 -> gcon                                      (168)
	aexp1 -> literal                                   (169)
	aexp1 -> '(' exp ')'                               (170)
	aexp1 -> '(' texps ')'                             (171)
	aexp1 -> '[' list ']'                              (172)
	aexp1 -> '(' infixexp qop ')'                      (173)
	aexp1 -> '(' qopm infixexp ')'                     (174)
	aexp1 -> qvar '@' aexp1                            (175)
	aexp1 -> '_'                                       (176)
	aexp1 -> '~' aexp1                                 (177)
	commas -> commas ','                               (178)
	commas -> ','                                      (179)
	texps -> texps ',' exp                             (180)
	texps -> exp ',' exp                               (181)
	list -> exp                                        (182)
	list -> lexps                                      (183)
	list -> exp '..'                                   (184)
	list -> exp ',' exp '..'                           (185)
	list -> exp '..' exp                               (186)
	list -> exp ',' exp '..' exp                       (187)
	list -> exp '|' quals                              (188)
	lexps -> lexps ',' exp                             (189)
	lexps -> exp ',' exp                               (190)
	quals -> quals ',' qual                            (191)
	quals -> qual                                      (192)
	qual -> infixexp '<-' exp                          (193)
	qual -> exp                                        (194)
	qual -> 'let' decllist                             (195)
	altslist -> '{' layout_off alts optsemi '}'        (196)
	altslist -> layout_on alts optsemi close           (197)
	alts -> alts ';' alt                               (198)
	alts -> alt                                        (199)
	alt -> infixexp srcloc ralt                        (200)
	alt -> infixexp srcloc ralt 'where' decllist       (201)
	ralt -> '->' exp                                   (202)
	ralt -> gdpats                                     (203)
	gdpats -> gdpats gdpat                             (204)
	gdpats -> gdpat                                    (205)
	gdpat -> '|' exp srcloc '->' exp                   (206)
	stmtlist -> '{' layout_off stmts '}'               (207)
	stmtlist -> layout_on stmts close                  (208)
	stmts -> stmts1 ';' exp                            (209)
	stmts -> exp                                       (210)
	stmts1 -> stmts1 ';' qual                          (211)
	stmts1 -> qual                                     (212)
	fbinds -> fbinds ',' fbind                         (213)
	fbinds -> fbind                                    (214)
	fbind -> qvar '=' exp                              (215)
	fbind -> qvar                                      (216)
	gcon -> '(' ')'                                    (217)
	gcon -> '[' ']'                                    (218)
	gcon -> '(' commas ')'                             (219)
	gcon -> qcon                                       (220)
	var -> varid                                       (221)
	var -> '(' varsym ')'                              (222)
	qvar -> qvarid                                     (223)
	qvar -> '(' qvarsym ')'                            (224)
	con -> conid                                       (225)
	con -> '(' consym ')'                              (226)
	qcon -> qconid                                     (227)
	qcon -> '(' qconsym ')'                            (228)
	varop -> varsym                                    (229)
	varop -> '`' varid '`'                             (230)
	qvarop -> qvarsym                                  (231)
	qvarop -> '`' qvarid '`'                           (232)
	qvaropm -> qvarsymm                                (233)
	qvaropm -> '`' qvarid '`'                          (234)
	conop -> consym                                    (235)
	conop -> '`' conid '`'                             (236)
	qconop -> qconsym                                  (237)
	qconop -> '`' qconid '`'                           (238)
	op -> varop                                        (239)
	op -> conop                                        (240)
	qop -> qvarop                                      (241)
	qop -> qconop                                      (242)
	qopm -> qvaropm                                    (243)
	qopm -> qconop                                     (244)
	qvarid -> varid                                    (245)
	qvarid -> QVARID                                   (246)
	varid -> VARID                                     (247)
	varid -> 'as'                                      (248)
	varid -> 'qualified'                               (249)
	varid -> 'hiding'                                  (250)
	qconid -> conid                                    (251)
	qconid -> QCONID                                   (252)
	conid -> CONID                                     (253)
	qconsym -> consym                                  (254)
	qconsym -> QCONSYM                                 (255)
	consym -> CONSYM                                   (256)
	qvarsym -> varsym                                  (257)
	qvarsym -> qvarsym1                                (258)
	qvarsymm -> varsymm                                (259)
	qvarsymm -> qvarsym1                               (260)
	varsym -> VARSYM                                   (261)
	varsym -> '-'                                      (262)
	varsym -> '!'                                      (263)
	varsymm -> VARSYM                                  (264)
	varsymm -> '!'                                     (265)
	qvarsym1 -> QVARSYM                                (266)
	literal -> INT                                     (267)
	literal -> CHAR                                    (268)
	literal -> RATIONAL                                (269)
	literal -> STRING                                  (270)
	srcloc ->                                          (271)
	close -> vccurly                                   (272)
	close -> error                                     (273)
	layout_off ->                                      (274)
	layout_on ->                                       (275)
	modid -> CONID                                     (276)
	tyconorcls -> conid                                (277)
	tycon -> conid                                     (278)
	qtyconorcls -> qconid                              (279)
	qtycls -> qconid                                   (280)
	tyvar -> varid                                     (281)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	VARID          { VarId $$ }
	QVARID         { QVarId $$ }
	CONID          { ConId $$ }
	QCONID         { QConId $$ }
	VARSYM         { VarSym $$ }
	CONSYM         { ConSym $$ }
	QVARSYM        { QVarSym $$ }
	QCONSYM        { QConSym $$ }
	INT            { IntTok $$ }
	RATIONAL       { FloatTok $$ }
	CHAR           { Character $$ }
	STRING         { StringTok $$ }
	'('            { LeftParen }
	')'            { RightParen }
	';'            { SemiColon }
	'{'            { LeftCurly }
	'}'            { RightCurly }
	vccurly        { VRightCurly }
	'['            { LeftSquare }
	']'            { RightSquare }
	','            { Comma }
	'_'            { Underscore }
	'`'            { BackQuote }
	'..'           { DotDot }
	'::'           { DoubleColon }
	'='            { Equals }
	'\\'           { Backslash }
	'|'            { Bar }
	'<-'           { LeftArrow }
	'->'           { RightArrow }
	'@'            { At }
	'~'            { Tilde }
	'=>'           { DoubleArrow }
	'-'            { Minus }
	'!'            { Exclamation }
	'as'           { KW_As }
	'case'         { KW_Case }
	'class'        { KW_Class }
	'data'         { KW_Data }
	'default'      { KW_Default }
	'deriving'     { KW_Deriving }
	'do'           { KW_Do }
	'else'         { KW_Else }
	'hiding'       { KW_Hiding }
	'if'           { KW_If }
	'import'       { KW_Import }
	'in'           { KW_In }
	'infix'        { KW_Infix }
	'infixl'       { KW_InfixL }
	'infixr'       { KW_InfixR }
	'instance'     { KW_Instance }
	'let'          { KW_Let }
	'module'       { KW_Module }
	'newtype'      { KW_NewType }
	'of'           { KW_Of }
	'then'         { KW_Then }
	'type'         { KW_Type }
	'where'        { KW_Where }
	'qualified'    { KW_Qualified }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start         rule  0
	module         rules 1, 2
	body           rules 3, 4
	bodyaux        rules 5, 6, 7, 8, 9, 10
	optsemi        rules 11, 12
	maybeexports   rules 13, 14
	exports        rules 15, 16
	maybecomma     rules 17, 18
	exportlist     rules 19, 20
	export         rules 21, 22, 23, 24, 25, 26
	qcnames        rules 27, 28
	qcname         rules 29, 30
	impdecls       rules 31, 32
	impdecl        rule  33
	optqualified   rules 34, 35
	maybeas        rules 36, 37
	maybeimpspec   rules 38, 39
	impspec        rules 40, 41
	importlist     rules 42, 43
	import         rules 44, 45, 46, 47, 48
	cnames         rules 49, 50
	cname          rules 51, 52
	fixdecls       rules 53, 54
	fix            rule  55
	prec           rules 56, 57
	infix          rules 58, 59, 60
	ops            rules 61, 62
	topdecls       rules 63, 64
	topdecl        rules 65, 66, 67, 68, 69, 70, 71
	decls          rules 72, 73
	decls1         rules 74, 75
	decl           rules 76, 77
	decllist       rules 78, 79
	signdecl       rule  80
	vars           rules 81, 82
	type           rules 83, 84
	btype          rules 85, 86
	atype          rules 87, 88, 89, 90, 91
	gtycon         rules 92, 93, 94, 95, 96
	ctype          rules 97, 98
	types          rules 99, 100
	simpletype     rule  101
	tyvars         rules 102, 103
	constrs        rules 104, 105
	constr         rules 106, 107, 108
	scontype       rules 109, 110
	scontype1      rules 111, 112
	satype         rules 113, 114
	sbtype         rules 115, 116
	fielddecls     rules 117, 118
	fielddecl      rule  119
	stype          rules 120, 121
	deriving       rules 122, 123, 124, 125
	dclasses       rules 126, 127
	optcbody       rules 128, 129, 130
	cbody          rules 131, 132, 133
	cmethods       rules 134, 135
	cdefaults      rules 136, 137
	optvaldefs     rules 138, 139, 140
	valdefs        rules 141, 142
	valdef         rules 143, 144
	rhs            rules 145, 146
	gdrhs          rules 147, 148
	gdrh           rule  149
	exp            rules 150, 151
	infixexp       rules 152, 153
	exp10          rules 154, 155, 156, 157, 158, 159, 160
	fexp           rules 161, 162
	aexps          rules 163, 164
	aexp           rules 165, 166
	aexp1          rules 167, 168, 169, 170, 171, 172, 173, 174, 175, 176, 177
	commas         rules 178, 179
	texps          rules 180, 181
	list           rules 182, 183, 184, 185, 186, 187, 188
	lexps          rules 189, 190
	quals          rules 191, 192
	qual           rules 193, 194, 195
	altslist       rules 196, 197
	alts           rules 198, 199
	alt            rules 200, 201
	ralt           rules 202, 203
	gdpats         rules 204, 205
	gdpat          rule  206
	stmtlist       rules 207, 208
	stmts          rules 209, 210
	stmts1         rules 211, 212
	fbinds         rules 213, 214
	fbind          rules 215, 216
	gcon           rules 217, 218, 219, 220
	var            rules 221, 222
	qvar           rules 223, 224
	con            rules 225, 226
	qcon           rules 227, 228
	varop          rules 229, 230
	qvarop         rules 231, 232
	qvaropm        rules 233, 234
	conop          rules 235, 236
	qconop         rules 237, 238
	op             rules 239, 240
	qop            rules 241, 242
	qopm           rules 243, 244
	qvarid         rules 245, 246
	varid          rules 247, 248, 249, 250
	qconid         rules 251, 252
	conid          rule  253
	qconsym        rules 254, 255
	consym         rule  256
	qvarsym        rules 257, 258
	qvarsymm       rules 259, 260
	varsym         rules 261, 262, 263
	varsymm        rules 264, 265
	qvarsym1       rule  266
	literal        rules 267, 268, 269, 270
	srcloc         rule  271
	close          rules 272, 273
	layout_off     rule  274
	layout_on      rule  275
	modid          rule  276
	tyconorcls     rule  277
	tycon          rule  278
	qtyconorcls    rule  279
	qtycls         rule  280
	tyvar          rule  281

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	error          reduce using rule 275
	VARID          reduce using rule 275
	QVARID         reduce using rule 275
	CONID          reduce using rule 275
	QCONID         reduce using rule 275
	INT            reduce using rule 275
	RATIONAL       reduce using rule 275
	CHAR           reduce using rule 275
	STRING         reduce using rule 275
	'('            reduce using rule 275
	'{'            shift, and enter state 4
	vccurly        reduce using rule 275
	'['            reduce using rule 275
	'_'            reduce using rule 275
	'\\'           reduce using rule 275
	'~'            reduce using rule 275
	'-'            reduce using rule 275
	'as'           reduce using rule 275
	'case'         reduce using rule 275
	'class'        reduce using rule 275
	'data'         reduce using rule 275
	'default'      reduce using rule 275
	'do'           reduce using rule 275
	'hiding'       reduce using rule 275
	'if'           reduce using rule 275
	'import'       reduce using rule 275
	'infix'        reduce using rule 275
	'infixl'       reduce using rule 275
	'infixr'       reduce using rule 275
	'instance'     reduce using rule 275
	'let'          reduce using rule 275
	'module'       shift, and enter state 5
	'newtype'      reduce using rule 275
	'type'         reduce using rule 275
	'qualified'    reduce using rule 275

	module         goto state 1
	body           goto state 2
	layout_on      goto state 3

State 1

	%start -> module .                                  (rule 0)

	%eof           accept


State 2

	module -> body .                                    (rule 2)

	%eof           reduce using rule 2


State 3

	body -> layout_on . bodyaux close                   (rule 4)

	error          reduce using rule 10
	VARID          shift, and enter state 34
	QVARID         shift, and enter state 35
	CONID          shift, and enter state 36
	QCONID         shift, and enter state 37
	INT            shift, and enter state 38
	RATIONAL       shift, and enter state 39
	CHAR           shift, and enter state 40
	STRING         shift, and enter state 41
	'('            shift, and enter state 42
	vccurly        reduce using rule 10
	'['            shift, and enter state 43
	'_'            shift, and enter state 44
	'\\'           shift, and enter state 45
	'~'            shift, and enter state 46
	'-'            shift, and enter state 47
	'as'           shift, and enter state 48
	'case'         shift, and enter state 49
	'class'        shift, and enter state 50
	'data'         shift, and enter state 51
	'default'      shift, and enter state 52
	'do'           shift, and enter state 53
	'hiding'       shift, and enter state 54
	'if'           shift, and enter state 55
	'import'       shift, and enter state 56
	'infix'        shift, and enter state 57
	'infixl'       shift, and enter state 58
	'infixr'       shift, and enter state 59
	'instance'     shift, and enter state 60
	'let'          shift, and enter state 61
	'newtype'      shift, and enter state 62
	'type'         shift, and enter state 63
	'qualified'    shift, and enter state 64

	bodyaux        goto state 9
	impdecls       goto state 10
	impdecl        goto state 11
	fixdecls       goto state 12
	fix            goto state 13
	infix          goto state 14
	topdecls       goto state 15
	topdecl        goto state 16
	decl           goto state 17
	signdecl       goto state 18
	vars           goto state 19
	valdef         goto state 20
	infixexp       goto state 21
	exp10          goto state 22
	fexp           goto state 23
	aexp           goto state 24
	aexp1          goto state 25
	gcon           goto state 26
	qvar           goto state 27
	qcon           goto state 28
	qvarid         goto state 29
	varid          goto state 30
	qconid         goto state 31
	conid          goto state 32
	literal        goto state 33

State 4

	body -> '{' . layout_off bodyaux '}'                (rule 3)

	VARID          reduce using rule 274
	QVARID         reduce using rule 274
	CONID          reduce using rule 274
	QCONID         reduce using rule 274
	INT            reduce using rule 274
	RATIONAL       reduce using rule 274
	CHAR           reduce using rule 274
	STRING         reduce using rule 274
	'('            reduce using rule 274
	'}'            reduce using rule 274
	'['            reduce using rule 274
	'_'            reduce using rule 274
	'\\'           reduce using rule 274
	'~'            reduce using rule 274
	'-'            reduce using rule 274
	'as'           reduce using rule 274
	'case'         reduce using rule 274
	'class'        reduce using rule 274
	'data'         reduce using rule 274
	'default'      reduce using rule 274
	'do'           reduce using rule 274
	'hiding'       reduce using rule 274
	'if'           reduce using rule 274
	'import'       reduce using rule 274
	'infix'        reduce using rule 274
	'infixl'       reduce using rule 274
	'infixr'       reduce using rule 274
	'instance'     reduce using rule 274
	'let'          reduce using rule 274
	'newtype'      reduce using rule 274
	'type'         reduce using rule 274
	'qualified'    reduce using rule 274

	layout_off     goto state 8

State 5

	module -> 'module' . modid maybeexports 'where' body    (rule 1)

	CONID          shift, and enter state 7

	modid          goto state 6

State 6

	module -> 'module' modid . maybeexports 'where' body    (rule 1)

	'('            shift, and enter state 152
	'where'        reduce using rule 14

	maybeexports   goto state 150
	exports        goto state 151

State 7

	modid -> CONID .                                    (rule 276)

	error          reduce using rule 276
	'('            reduce using rule 276
	')'            reduce using rule 276
	';'            reduce using rule 276
	'}'            reduce using rule 276
	vccurly        reduce using rule 276
	','            reduce using rule 276
	'as'           reduce using rule 276
	'hiding'       reduce using rule 276
	'where'        reduce using rule 276


State 8

	body -> '{' layout_off . bodyaux '}'                (rule 3)

	VARID          shift, and enter state 34
	QVARID         shift, and enter state 35
	CONID          shift, and enter state 36
	QCONID         shift, and enter state 37
	INT            shift, and enter state 38
	RATIONAL       shift, and enter state 39
	CHAR           shift, and enter state 40
	STRING         shift, and enter state 41
	'('            shift, and enter state 42
	'}'            reduce using rule 10
	'['            shift, and enter state 43
	'_'            shift, and enter state 44
	'\\'           shift, and enter state 45
	'~'            shift, and enter state 46
	'-'            shift, and enter state 47
	'as'           shift, and enter state 48
	'case'         shift, and enter state 49
	'class'        shift, and enter state 50
	'data'         shift, and enter state 51
	'default'      shift, and enter state 52
	'do'           shift, and enter state 53
	'hiding'       shift, and enter state 54
	'if'           shift, and enter state 55
	'import'       shift, and enter state 56
	'infix'        shift, and enter state 57
	'infixl'       shift, and enter state 58
	'infixr'       shift, and enter state 59
	'instance'     shift, and enter state 60
	'let'          shift, and enter state 61
	'newtype'      shift, and enter state 62
	'type'         shift, and enter state 63
	'qualified'    shift, and enter state 64

	bodyaux        goto state 149
	impdecls       goto state 10
	impdecl        goto state 11
	fixdecls       goto state 12
	fix            goto state 13
	infix          goto state 14
	topdecls       goto state 15
	topdecl        goto state 16
	decl           goto state 17
	signdecl       goto state 18
	vars           goto state 19
	valdef         goto state 20
	infixexp       goto state 21
	exp10          goto state 22
	fexp           goto state 23
	aexp           goto state 24
	aexp1          goto state 25
	gcon           goto state 26
	qvar           goto state 27
	qcon           goto state 28
	qvarid         goto state 29
	varid          goto state 30
	qconid         goto state 31
	conid          goto state 32
	literal        goto state 33

State 9

	body -> layout_on bodyaux . close                   (rule 4)

	error          shift, and enter state 147
	vccurly        shift, and enter state 148

	close          goto state 146

State 10

	bodyaux -> impdecls . ';' fixdecls ';' topdecls optsemi    (rule 5)
	bodyaux -> impdecls . ';' topdecls optsemi          (rule 6)
	bodyaux -> impdecls . optsemi                       (rule 9)
	impdecls -> impdecls . ';' impdecl                  (rule 31)

	error          reduce using rule 12
	';'            shift, and enter state 145
	'}'            reduce using rule 12
	vccurly        reduce using rule 12

	optsemi        goto state 144

State 11

	impdecls -> impdecl .                               (rule 32)

	error          reduce using rule 32
	';'            reduce using rule 32
	'}'            reduce using rule 32
	vccurly        reduce using rule 32


State 12

	bodyaux -> fixdecls . ';' topdecls optsemi          (rule 7)
	fixdecls -> fixdecls . ';' fix                      (rule 53)

	';'            shift, and enter state 143


State 13

	fixdecls -> fix .                                   (rule 54)

	';'            reduce using rule 54


State 14

	fix -> infix . srcloc prec ops                      (rule 55)

	VARSYM         reduce using rule 271
	CONSYM         reduce using rule 271
	INT            reduce using rule 271
	'`'            reduce using rule 271
	'-'            reduce using rule 271
	'!'            reduce using rule 271

	srcloc         goto state 142

State 15

	bodyaux -> topdecls . optsemi                       (rule 8)
	topdecls -> topdecls . ';' topdecl                  (rule 63)

	error          reduce using rule 12
	';'            shift, and enter state 141
	'}'            reduce using rule 12
	vccurly        reduce using rule 12

	optsemi        goto state 140

State 16

	topdecls -> topdecl .                               (rule 64)

	error          reduce using rule 64
	';'            reduce using rule 64
	'}'            reduce using rule 64
	vccurly        reduce using rule 64


State 17

	topdecl -> decl .                                   (rule 71)

	error          reduce using rule 71
	';'            reduce using rule 71
	'}'            reduce using rule 71
	vccurly        reduce using rule 71


State 18

	decl -> signdecl .                                  (rule 76)

	error          reduce using rule 76
	';'            reduce using rule 76
	'}'            reduce using rule 76
	vccurly        reduce using rule 76


State 19

	signdecl -> vars . srcloc '::' ctype                (rule 80)
	vars -> vars . ',' var                              (rule 81)

	','            shift, and enter state 139
	'::'           reduce using rule 271

	srcloc         goto state 138

State 20

	decl -> valdef .                                    (rule 77)

	error          reduce using rule 77
	';'            reduce using rule 77
	'}'            reduce using rule 77
	vccurly        reduce using rule 77


State 21

	valdef -> infixexp . srcloc rhs                     (rule 143)
	valdef -> infixexp . srcloc rhs 'where' decllist    (rule 144)
	infixexp -> infixexp . qop exp10                    (rule 153)

	VARSYM         shift, and enter state 134
	CONSYM         shift, and enter state 116
	QVARSYM        shift, and enter state 117
	QCONSYM        shift, and enter state 118
	'`'            shift, and enter state 135
	'='            reduce using rule 271
	'|'            reduce using rule 271
	'-'            shift, and enter state 136
	'!'            shift, and enter state 137

	qvarop         goto state 127
	qconop         goto state 128
	qop            goto state 129
	qconsym        goto state 130
	consym         goto state 109
	qvarsym        goto state 131
	varsym         goto state 112
	qvarsym1       goto state 132
	srcloc         goto state 133

State 22

	infixexp -> exp10 .                                 (rule 152)

	error          reduce using rule 152
	VARSYM         reduce using rule 152
	CONSYM         reduce using rule 152
	QVARSYM        reduce using rule 152
	QCONSYM        reduce using rule 152
	')'            reduce using rule 152
	';'            reduce using rule 152
	'}'            reduce using rule 152
	vccurly        reduce using rule 152
	']'            reduce using rule 152
	','            reduce using rule 152
	'`'            reduce using rule 152
	'..'           reduce using rule 152
	'::'           reduce using rule 152
	'='            reduce using rule 152
	'|'            reduce using rule 152
	'<-'           reduce using rule 152
	'->'           reduce using rule 152
	'-'            reduce using rule 152
	'!'            reduce using rule 152
	'else'         reduce using rule 152
	'of'           reduce using rule 152
	'then'         reduce using rule 152
	'where'        reduce using rule 152


State 23

	exp10 -> fexp .                                     (rule 160)
	fexp -> fexp . aexp                                 (rule 161)

	error          reduce using rule 160
	VARID          shift, and enter state 34
	QVARID         shift, and enter state 35
	CONID          shift, and enter state 36
	QCONID         shift, and enter state 37
	VARSYM         reduce using rule 160
	CONSYM         reduce using rule 160
	QVARSYM        reduce using rule 160
	QCONSYM        reduce using rule 160
	INT            shift, and enter state 38
	RATIONAL       shift, and enter state 39
	CHAR           shift, and enter state 40
	STRING         shift, and enter state 41
	'('            shift, and enter state 42
	')'            reduce using rule 160
	';'            reduce using rule 160
	'}'            reduce using rule 160
	vccurly        reduce using rule 160
	'['            shift, and enter state 43
	']'            reduce using rule 160
	','            reduce using rule 160
	'_'            shift, and enter state 44
	'`'            reduce using rule 160
	'..'           reduce using rule 160
	'::'           reduce using rule 160
	'='            reduce using rule 160
	'|'            reduce using rule 160
	'<-'           reduce using rule 160
	'->'           reduce using rule 160
	'~'            shift, and enter state 46
	'-'            reduce using rule 160
	'!'            reduce using rule 160
	'as'           shift, and enter state 48
	'else'         reduce using rule 160
	'hiding'       shift, and enter state 54
	'of'           reduce using rule 160
	'then'         reduce using rule 160
	'where'        reduce using rule 160
	'qualified'    shift, and enter state 64

	aexp           goto state 126
	aexp1          goto state 25
	gcon           goto state 26
	qvar           goto state 85
	qcon           goto state 28
	qvarid         goto state 29
	varid          goto state 30
	qconid         goto state 31
	conid          goto state 32
	literal        goto state 33

State 24

	fexp -> aexp .                                      (rule 162)
	aexp -> aexp . '{' layout_off fbinds '}'            (rule 165)

	error          reduce using rule 162
	VARID          reduce using rule 162
	QVARID         reduce using rule 162
	CONID          reduce using rule 162
	QCONID         reduce using rule 162
	VARSYM         reduce using rule 162
	CONSYM         reduce using rule 162
	QVARSYM        reduce using rule 162
	QCONSYM        reduce using rule 162
	INT            reduce using rule 162
	RATIONAL       reduce using rule 162
	CHAR           reduce using rule 162
	STRING         reduce using rule 162
	'('            reduce using rule 162
	')'            reduce using rule 162
	';'            reduce using rule 162
	'{'            shift, and enter state 125
	'}'            reduce using rule 162
	vccurly        reduce using rule 162
	'['            reduce using rule 162
	']'            reduce using rule 162
	','            reduce using rule 162
	'_'            reduce using rule 162
	'`'            reduce using rule 162
	'..'           reduce using rule 162
	'::'           reduce using rule 162
	'='            reduce using rule 162
	'|'            reduce using rule 162
	'<-'           reduce using rule 162
	'->'           reduce using rule 162
	'~'            reduce using rule 162
	'-'            reduce using rule 162
	'!'            reduce using rule 162
	'as'           reduce using rule 162
	'else'         reduce using rule 162
	'hiding'       reduce using rule 162
	'of'           reduce using rule 162
	'then'         reduce using rule 162
	'where'        reduce using rule 162
	'qualified'    reduce using rule 162


State 25

	aexp -> aexp1 .                                     (rule 166)
